# sciicad-opcua

./: README.md  pyproject.toml
gds/: Dockerfile  gds_config.yaml  gds_server.py
ihm/: Dockerfile  ihm_client.py
lds/: Dockerfile  lds_server.py
protect-plc/: plc_server.py
thermo-plc/: Dockerfile  plc_server.py
tools/: analyze.py  check_lds_gds.py  crypto_opcua.py  ihm_action.py  lds_minimal.py  opcua_utils.py  plc_2_lds.py  plc_basic.py  test_discovery.py  test_gds.py  test_lds_discovery.py
